--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -3,8 +3,13 @@ layout: default
 ---
 
 <div class="home">
+
+  <h1 class="page-heading">Wijnen</h1>
+
+  {{ content }}
+
   <ul class="post-list">
-    {% for post in site.wijnen %}
+    {% for post in site.posts %}
       <li>
         <h2><a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></h2>
         <p>{{post.content}}</p>
