--- a/assets/main.scss
+++ b/assets/main.scss
@@ -41,3 +41,11 @@ $on-laptop:        800px;
 nav.menu li {
   display : inline-block;
 }
+.wijn {
+  text-align: justify;
+}
+.wijn img {
+  float:left;
+  max-height: 300px;
+  padding: 0 1em 1em 0;
+}
