--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="home">
+<div class="category">
 
   <h1 class="page-heading">{{page.slug}}</h1>
 
@@ -11,9 +11,9 @@ layout: default
   <ul class="post-list">
     {% for post in site.wijnen %}
       {% if post.soort == page.slug %}
-        <li>
-          <h2><a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></h2>
-          <p>{{post.content}}</p>
+        <li class="wijn">
+          <h2>{{ post.title | escape }}</h2>
+          {{post.content}}
         </li>
       {% endif %}
     {% endfor %}
