--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
   <ul class="post-list">
     {% for post in site.wijnen %}
       <li class='wijn'>
-        <h2><a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></h2>
+        <h2>{{ post.title | escape }}</h2>
         {{post.content}}
       </li>
     {% endfor %}
