--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,8 +6,14 @@ layout: default
   <ul class="post-list">
     {% for post in site.wijnen %}
       <li class='wijn'>
-        <h2>{{ post.title | escape }}</h2>
+        <img src={{post.image}}/>
+        <h2 class="typl8-delta">{{ post.title | escape }}</h2>
         {{post.content}}
+        <aside class="typl8-pull-quote">
+          <blockquote>
+            <p>{{post.quote}}</p>
+          </blockquote>
+        </aside>
       </li>
     {% endfor %}
   </ul>
