--- a/_layouts/wijn.html
+++ b/_layouts/wijn.html
@@ -2,13 +2,7 @@
 layout: default
 ---
 <div class="wijn">
-  {% assign category = site.collections.soorten | where: "slug", page.soort %}
-  {% assign category = category[0] %}
-  {% if category %}
-      {% capture category_content %}<a class="label" href="{{ category.url }}">{{ category.name }}</a>{% endcapture %}
-  {% endif %}
-  <h1>{{page.title}}</h1>
-  <p id="post-meta">{{ category_content }}</p>
+  <h1 class="typl8-gamma">{{page.title}}</h1>
   {{page.soort}}
   {{ content }}
 </div>
