--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ "/" | relative_url}}"><img src="/assets/logo.png"/>{{ site.title | escape }}</a>
+    <a class="site-title" href="{{ "/" | relative_url}}"><img src="{{"/assets/logo.png" | relative_url }}"/>{{ site.title | escape }}</a>
 
     <nav class="site-nav">
       <span class="menu-icon">
