--- a/assets/main.scss
+++ b/assets/main.scss
@@ -358,6 +358,10 @@ p + .typl8-drop-cap {
 nav.menu li {
   display : inline-block;
 }
+
+.wijn {
+  clear : left;
+}
 .wijn p {
   // text-align: justify;
 }
