--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,7 +5,7 @@
 
 // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-size:   18px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
@@ -359,33 +359,49 @@ nav.menu li {
   display : inline-block;
 }
 
-.wijn {
-  clear : left;
-}
-.wijn p {
-  // text-align: justify;
-}
-.wijn img {
+.container .thumb {
   float:left;
-  max-height: 300px;
-  padding: 0 1em 1em 0;
 }
 
-h2 {
-  font-weight: 400;
+.wijn img {
+  max-height: 300px;
+  display: block;
+  padding: 0 1rem 1rem 0;
 }
+
+.clear-left {
+  clear: left;
+}
+
 .typl8-pull-quote:before, .typl8-pull-quote:after {
     color: #7F1953;
 }
+
 blockquote > :last-child {
-    font-weight: 400;
+    font-weight: 600;
     font-size: 1.2rem;
     letter-spacing: 0px;
 }
+
 p {
   font-weight: 300;
 }
 
 nav {
   font-weight: 600;
+}
+
+blockquote {
+    color: #14040d;
+    border-left: 0px;
+    padding-left: 1.5rem;
+    font-size: 1.15rem;
+}
+
+.site-header {
+  border-top: 0px;
+}
+
+.post-list > li {
+    margin-bottom: 6rem;
 }
