--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
-
   {% include head.html %}
-
   <body>
-
     {% include header.html %}
     <img src="{{"/assets/header.jpg" | relative_url }}" alt="Druiventros"/>
     <main class="page-content" aria-label="Content">
@@ -12,9 +9,7 @@
         {{ content }}
       </div>
     </main>
-
     {% include footer.html %}
-
+    <script src="/index.js"></script>
   </body>
-
 </html>
